--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Premier site</title>
+    <img src="source" alt="image source">
 </head>
 <body>
     <h1>Bienvenu sur mon site</h1>
